--- a/css/style.styl
+++ b/css/style.styl
@@ -1,29 +1,98 @@
+@import url("font.styl");
 @import url("materialize.min.css");
 
-nav
-	background none
-	box-shadow none
-	i.large-icon
-		font-size 3rem;
-		position absolute
-		top 10px
-		left 15px
+body
+    font-size 16px
+
+h1
+    margin 0
+    padding 0
+
+a
+  color: currentColor;
+
+.container
+    min-width 800px
+    margin 0 auto
+
+.center_text
+    text-align: center;
+
 .header
-	&__nav
-		position absolute
-		z-index 5
-	&__title
-		img
-			width 100%
-			height 100vh 
-	&__text
-		position absolute
-		top 33vh
-		text-align center
-		width 100%
-		background rgba(black, 0.62);
-		padding 0 20px 10px 20px
-		color white
-		font-family: 'Open Sans', sans-serif;
-		h4
-			font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Indie Flower', cursive;
+    &__container
+        position absolute
+        top 0
+        left 0
+        right 0
+
+    &__nav
+        color white
+        background none
+        box-shadow none
+        position absolute
+        width auto
+        top 20px
+        left 20px
+        i
+            font-size 60px !important
+    .title
+        color white;
+        display: block;
+        h1
+            font-size: 60px;
+            margin-top: 50px;
+            text-align: center;
+        img
+            border-radius 50%
+            width: 170px;
+        figure
+          text-align: center;
+        p
+          font-size: 20px;
+          &:hover
+            text-decoration: underline;
+    .box_principal
+        width: 340px;
+        height: 100vh;
+        display: block;
+        position: absolute;
+        padding-top: 15vh;
+        background: rgba(0, 0, 0, 0.19);
+        right: 50px;
+    .parallax-container
+        height 100vh
+        z-index -5
+        img
+            transition: .3s;
+            height: 120%;
+    .social
+        display: flex;
+        position: absolute;
+        bottom: 3px;
+        padding: 25px;
+        align-items: center;
+        right: 0;
+        justify-content: center;
+        width: 100%;
+        .item
+            width: 50px;
+            margin: 0 5px;
+            &:hover
+                transform scale(1.2)
+            .facebook
+                background #0080c0;
+            .twitter
+                background #00bae4;
+            .github
+                background #829aa8;
+            i
+                background: #fff;
+                padding: 10px;
+                font-size: 1.5em;
+                border-radius: 50%;
+.presentacion
+    height 100vh
+
+// font-family: 'Indie Flower', cursive;
+// font-family: 'Assistant', sans-serif;
