--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,21 @@ figure, body {
 }
 
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif !important;
     overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5 {
     margin: 0px 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .absolute {
@@ -27,7 +36,7 @@ h1, h2, h3, h4, h5 {
     margin-right: 10px;
 }
 
-.uppercase {
+.uppercase-title {
     text-transform: uppercase;
 }
 
@@ -36,10 +45,14 @@ h1, h2, h3, h4, h5 {
 }
 
 .line {
-    background: #fff;
+    background: white;
     width: 100%;
-    height: 0.5em;
+    height: 2px;
     border-radius: 0.5em;
+}
+
+.line-principal {
+    background: #6d6d6d;
 }
 
 .header {
@@ -57,23 +70,28 @@ h1, h2, h3, h4, h5 {
     right: -150px;
     transition: 300ms;
 }
-.menu.activate{
-  right: 20px;
+
+.menu.activate {
+    right: 20px;
 }
+
 .menu ul {
     list-style-type: none;
     padding: 0;
     margin: 5px 0;
 }
-.menu a{
-  text-decoration: none;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  display: block;
+
+.menu a {
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    display: block;
 }
+
 .title_principal h1, .title_principal h2 {
     margin: 10px 0;
+    font-weight: 500;
 }
 
 .fondo_container {
@@ -95,7 +113,9 @@ h1, h2, h3, h4, h5 {
     width: 15em;
     margin-top: 2.5em;
     border-radius: 50%;
-    border: 5px solid #fff;
+    -webkit-box-shadow: 0px 3px 21px -1px rgba(112, 112, 112, 1);
+    -moz-box-shadow: 0px 3px 21px -1px rgba(112, 112, 112, 1);
+    box-shadow: 0px 3px 21px -1px rgba(112, 112, 112, 1);
 }
 
 .title_container {
@@ -122,6 +142,11 @@ h1, h2, h3, h4, h5 {
 
 .title_principal {
     margin: 2em 6em;
+    color: #6d6d6d;
+}
+
+.title_principal h2 {
+    font-size: 22.5px;
 }
 
 .title_principal_first_line {
@@ -215,7 +240,12 @@ h1, h2, h3, h4, h5 {
 }
 
 .mywork_container {
+    padding: 0px 30px;
+}
+
+#mycertificate {
     padding: 50px 30px;
+    padding-bottom: 0px;
 }
 
 .mywork_container h3 {
@@ -237,6 +267,10 @@ h1, h2, h3, h4, h5 {
     position: relative;
     margin-bottom: 40px;
     width: 350px;
+    height: 260px;
+    text-align: center;
+    overflow: hidden;
+    background: #fafafa;
 }
 
 .mywork_item:nth-child(2n) {
@@ -244,7 +278,6 @@ h1, h2, h3, h4, h5 {
 }
 
 .mywork_item_img {
-    width: 100%;
     height: 100%;
 }
 
@@ -307,6 +340,7 @@ h1, h2, h3, h4, h5 {
     height: 40px;
     display: none;
 }
-.button-menu.activate{
-  display: block;
+
+.button-menu.activate {
+    display: block;
 }
